# quicker

./: .gitignore  README.md  README_en.md  english.txt  setup.cfg
docs/: conf.py  index.rst
scr/: trans.py
scr/translation/: doc_jp.py
scr/web_api/: app.py
scr/web_api/templates/: base.html
src/email/: send_email.py
src/game/: base_game.py
src/translation/: doc_jp.py  trans.py
src/web_api/: app.py
src/web_api/templates/: index.html
tests/: english.txt  test_translation.py  trans.py
