[metadata]
name = quicker
version = 0.1.0
description = A library to help you develop fast for Python beginners.
maintainer = Tree-flog-code
long_description = file: README.md
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6.9
[options]
package_dir=
    =src
packages=find:
install_requires = 
        googletrans
        
[options.extras_require]
dev = 
  flake8
  pytest